refactor: change `.text-muted` to `.text-medium-emphasis`

--- a/src/pug/views/500.pug
+++ b/src/pug/views/500.pug
@@ -7,7 +7,7 @@ block view
         .clearfix
           h1.float-start.display-3.me-4 500
           h4.pt-3 Houston, we have a problem!
-          p.text-muted The page you are looking for is temporarily unavailable.
+          p.text-medium-emphasis The page you are looking for is temporarily unavailable.
         .input-group
           span.input-group-text
             svg.icon
