--- a/src/pug/views/base/list-group.pug
+++ b/src/pug/views/base/list-group.pug
@@ -140,17 +140,17 @@ block view
             a.list-group-item.list-group-item-action.flex-column.align-items-start(href='#')
               .d-flex.w-100.justify-content-between
                 h5.mb-1 List group item heading
-                small.text-muted 3 days ago
+                small.text-medium-emphasis 3 days ago
               p.mb-1
                 | Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.
-              small.text-muted Donec id elit non mi porta.
+              small.text-medium-emphasis Donec id elit non mi porta.
             a.list-group-item.list-group-item-action.flex-column.align-items-start(href='#')
               .d-flex.w-100.justify-content-between
                 h5.mb-1 List group item heading
-                small.text-muted 3 days ago
+                small.text-medium-emphasis 3 days ago
               p.mb-1
                 | Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.
-              small.text-muted Donec id elit non mi porta.
+              small.text-medium-emphasis Donec id elit non mi porta.
   .row
     .col
       .card.mb-4
