--- a/src/pug/views/base/tooltips.pug
+++ b/src/pug/views/base/tooltips.pug
@@ -12,7 +12,7 @@ block view
         a(href='http://coreui.io/docs/components/tooltips/', target='_blank')
           | docs
     .card-body
-      p.text-muted Hover over the links below to see tooltips:
+      p.text-medium-emphasis Hover over the links below to see tooltips:
       .bd-example.tooltip-demo
         p.muted
           | Tight pants next level keffiyeh
