--- a/src/pug/views/register.pug
+++ b/src/pug/views/register.pug
@@ -7,7 +7,7 @@ block view
         .card.mb-4.mx-4
           .card-body.p-4
             h1 Register
-            p.text-muted Create your account
+            p.text-medium-emphasis Create your account
             .input-group.mb-3
               span.input-group-text
                 svg.icon
