--- a/src/pug/views/widgets.pug
+++ b/src/pug/views/widgets.pug
@@ -159,7 +159,7 @@ block view
     .col-md-2.col-sm-4
       .card.mb-4
         .card-body.text-center
-          .text-muted.small.text-uppercase.fw-semibold Title
+          .text-medium-emphasis.small.text-uppercase.fw-semibold Title
           .fs-6.fw-semibold.py-3 1,123
           .c-chart-wrapper.mx-auto(style='height:40px;width:80px')
             canvas#sparkline-chart-1.chart.chart-bar(height='40', width='80')
@@ -167,7 +167,7 @@ block view
     .col-md-2.col-sm-4
       .card.mb-4
         .card-body.text-center
-          .text-muted.small.text-uppercase.fw-semibold Title
+          .text-medium-emphasis.small.text-uppercase.fw-semibold Title
           .fs-6.fw-semibold.py-3 1,123
           .c-chart-wrapper.mx-auto(style='height:40px;width:80px')
             canvas#sparkline-chart-2.chart.chart-bar(height='40', width='80')
@@ -175,7 +175,7 @@ block view
     .col-md-2.col-sm-4
       .card.mb-4
         .card-body.text-center
-          .text-muted.small.text-uppercase.fw-semibold Title
+          .text-medium-emphasis.small.text-uppercase.fw-semibold Title
           .fs-6.fw-semibold.py-3 1,123
           .c-chart-wrapper.mx-auto(style='height:40px;width:80px')
             canvas#sparkline-chart-3.chart.chart-bar(height='40', width='80')
@@ -183,7 +183,7 @@ block view
     .col-md-2.col-sm-4
       .card.mb-4
         .card-body.text-center
-          .text-muted.small.text-uppercase.fw-semibold Title
+          .text-medium-emphasis.small.text-uppercase.fw-semibold Title
           .fs-6.fw-semibold.py-3 1,123
           .c-chart-wrapper.mx-auto(style='height:40px;width:80px')
             canvas#sparkline-chart-4.chart.chart-line(height='40', width='100')
@@ -191,7 +191,7 @@ block view
     .col-md-2.col-sm-4
       .card.mb-4
         .card-body.text-center
-          .text-muted.small.text-uppercase.fw-semibold Title
+          .text-medium-emphasis.small.text-uppercase.fw-semibold Title
           .fs-6.fw-semibold.py-3 1,123
           .c-chart-wrapper.mx-auto(style='height:40px;width:80px')
             canvas#sparkline-chart-5.chart.chart-line(height='40', width='100')
@@ -199,7 +199,7 @@ block view
     .col-md-2.col-sm-4
       .card.mb-4
         .card-body.text-center
-          .text-muted.small.text-uppercase.fw-semibold Title
+          .text-medium-emphasis.small.text-uppercase.fw-semibold Title
           .fs-6.fw-semibold.py-3 1,123
           .c-chart-wrapper.mx-auto(style='height:40px;width:80px')
             canvas#sparkline-chart-6.chart.chart-line(height='40', width='100')
@@ -214,7 +214,7 @@ block view
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-settings")
           div
             .fs-6.fw-semibold.text-primary $1.999,50
-            .text-muted.text-uppercase.fw-semibold.small Widget title
+            .text-medium-emphasis.text-uppercase.fw-semibold.small Widget title
     // /.col
     .col-6.col-lg-3
       .card.mb-4
@@ -224,7 +224,7 @@ block view
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-laptop")
           div
             .fs-6.fw-semibold.text-info $1.999,50
-            .text-muted.text-uppercase.fw-semibold.small Widget title
+            .text-medium-emphasis.text-uppercase.fw-semibold.small Widget title
     // /.col
     .col-6.col-lg-3
       .card.mb-4
@@ -234,7 +234,7 @@ block view
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-moon")
           div
             .fs-6.fw-semibold.text-warning $1.999,50
-            .text-muted.text-uppercase.fw-semibold.small Widget title
+            .text-medium-emphasis.text-uppercase.fw-semibold.small Widget title
     // /.col
     .col-6.col-lg-3
       .card.mb-4
@@ -244,7 +244,7 @@ block view
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bell")
           div
             .fs-6.fw-semibold.text-danger $1.999,50
-            .text-muted.text-uppercase.fw-semibold.small Widget title
+            .text-medium-emphasis.text-uppercase.fw-semibold.small Widget title
     // /.col
     .col-6.col-lg-3
       .card.mb-4
@@ -254,9 +254,9 @@ block view
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-settings")
           div
             .fs-6.fw-semibold.text-primary $1.999,50
-            .text-muted.text-uppercase.fw-semibold.small Widget title
+            .text-medium-emphasis.text-uppercase.fw-semibold.small Widget title
         .card-footer.px-3.py-2
-          a.btn-block.text-muted.d-flex.justify-content-between.align-items-center(href='#')
+          a.btn-block.text-medium-emphasis.d-flex.justify-content-between.align-items-center(href='#')
             span.small.fw-semibold View More
             svg.icon
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-chevron-right")
@@ -269,9 +269,9 @@ block view
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-laptop")
           div
             .fs-6.fw-semibold.text-info $1.999,50
-            .text-muted.text-uppercase.fw-semibold.small Widget title
+            .text-medium-emphasis.text-uppercase.fw-semibold.small Widget title
         .card-footer.px-3.py-2
-          a.btn-block.text-muted.d-flex.justify-content-between.align-items-center(href='#')
+          a.btn-block.text-medium-emphasis.d-flex.justify-content-between.align-items-center(href='#')
             span.small.fw-semibold View More
             svg.icon
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-chevron-right")
@@ -284,9 +284,9 @@ block view
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-moon")
           div
             .fs-6.fw-semibold.text-warning $1.999,50
-            .text-muted.text-uppercase.fw-semibold.small Widget title
+            .text-medium-emphasis.text-uppercase.fw-semibold.small Widget title
         .card-footer.px-3.py-2
-          a.btn-block.text-muted.d-flex.justify-content-between.align-items-center(href='#')
+          a.btn-block.text-medium-emphasis.d-flex.justify-content-between.align-items-center(href='#')
             span.small.fw-semibold View More
             svg.icon
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-chevron-right")
@@ -299,9 +299,9 @@ block view
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bell")
           div
             .fs-6.fw-semibold.text-danger $1.999,50
-            .text-muted.text-uppercase.fw-semibold.small Widget title
+            .text-medium-emphasis.text-uppercase.fw-semibold.small Widget title
         .card-footer.px-3.py-2
-          a.btn-block.text-muted.d-flex.justify-content-between.align-items-center(href='#')
+          a.btn-block.text-medium-emphasis.d-flex.justify-content-between.align-items-center(href='#')
             span.small.fw-semibold View More
             svg.icon
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-chevron-right")
@@ -316,7 +316,7 @@ block view
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-settings")
           div
             .fs-6.fw-semibold.text-primary $1.999,50
-            .text-muted.text-uppercase.fw-semibold.small Widget title
+            .text-medium-emphasis.text-uppercase.fw-semibold.small Widget title
     // /.col
     .col-6.col-lg-3
       .card.mb-4.overflow-hidden
@@ -326,7 +326,7 @@ block view
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-laptop")
           div
             .fs-6.fw-semibold.text-info $1.999,50
-            .text-muted.text-uppercase.fw-semibold.small Widget title
+            .text-medium-emphasis.text-uppercase.fw-semibold.small Widget title
     // /.col
     .col-6.col-lg-3
       .card.mb-4.overflow-hidden
@@ -336,7 +336,7 @@ block view
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-moon")
           div
             .fs-6.fw-semibold.text-warning $1.999,50
-            .text-muted.text-uppercase.fw-semibold.small Widget title
+            .text-medium-emphasis.text-uppercase.fw-semibold.small Widget title
     // /.col
     .col-6.col-lg-3
       .card.mb-4.overflow-hidden
@@ -346,7 +346,7 @@ block view
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bell")
           div
             .fs-6.fw-semibold.text-danger $1.999,50
-            .text-muted.text-uppercase.fw-semibold.small Widget title
+            .text-medium-emphasis.text-uppercase.fw-semibold.small Widget title
     // /.col
     .col-6.col-lg-3
       .card.mb-4.overflow-hidden
@@ -356,7 +356,7 @@ block view
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-settings")
           div
             .fs-6.fw-semibold.text-primary $1.999,50
-            .text-muted.text-uppercase.fw-semibold.small Widget title
+            .text-medium-emphasis.text-uppercase.fw-semibold.small Widget title
     // /.col
     .col-6.col-lg-3
       .card.mb-4.overflow-hidden
@@ -366,7 +366,7 @@ block view
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-laptop")
           div
             .fs-6.fw-semibold.text-info $1.999,50
-            .text-muted.text-uppercase.fw-semibold.small Widget title
+            .text-medium-emphasis.text-uppercase.fw-semibold.small Widget title
     // /.col
     .col-6.col-lg-3
       .card.mb-4.overflow-hidden
@@ -376,7 +376,7 @@ block view
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-moon")
           div
             .fs-6.fw-semibold.text-warning $1.999,50
-            .text-muted.text-uppercase.fw-semibold.small Widget title
+            .text-medium-emphasis.text-uppercase.fw-semibold.small Widget title
     // /.col
     .col-6.col-lg-3
       .card.mb-4.overflow-hidden
@@ -386,7 +386,7 @@ block view
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bell")
           div
             .fs-6.fw-semibold.text-danger $1.999,50
-            .text-muted.text-uppercase.fw-semibold.small Widget title
+            .text-medium-emphasis.text-uppercase.fw-semibold.small Widget title
     // /.col
   // /.row
   .row
@@ -400,11 +400,11 @@ block view
         .card-body.row.text-center
           .col
             .fs-5.fw-semibold 89k
-            .text-uppercase.text-muted.small friends
+            .text-uppercase.text-medium-emphasis.small friends
           .vr
           .col
             .fs-5.fw-semibold 459
-            .text-uppercase.text-muted.small feeds
+            .text-uppercase.text-medium-emphasis.small feeds
     // /.col
     .col-sm-6.col-lg-4
       .card.mb-4(style='--cui-card-cap-bg: #00aced')
@@ -416,11 +416,11 @@ block view
         .card-body.row.text-center
           .col
             .fs-5.fw-semibold 973k
-            .text-uppercase.text-muted.small followers
+            .text-uppercase.text-medium-emphasis.small followers
           .vr
           .col
             .fs-5.fw-semibold 1.792
-            .text-uppercase.text-muted.small tweets
+            .text-uppercase.text-medium-emphasis.small tweets
     // /.col
     .col-sm-6.col-lg-4
       .card.mb-4(style='--cui-card-cap-bg: #4875b4')
@@ -432,123 +432,123 @@ block view
         .card-body.row.text-center
           .col
             .fs-5.fw-semibold 500+
-            .text-uppercase.text-muted.small contacts
+            .text-uppercase.text-medium-emphasis.small contacts
           .vr
           .col
             .fs-5.fw-semibold 292
-            .text-uppercase.text-muted.small feeds
+            .text-uppercase.text-medium-emphasis.small feeds
     // /.col
   // /.row
   .card-group
     .card.mb-4
       .card-body
-        .text-muted.text-end.mb-4
+        .text-medium-emphasis.text-end.mb-4
           svg.icon.icon-2xl
             use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-people")
         .fs-4.fw-semibold 87.500
-        small.text-muted.text-uppercase.fw-semibold Visitors
+        small.text-medium-emphasis.text-uppercase.fw-semibold Visitors
         .progress.progress-xs.mt-3.mb-0
           .progress-bar.bg-info(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
     .card.mb-4
       .card-body
-        .text-muted.text-end.mb-4
+        .text-medium-emphasis.text-end.mb-4
           svg.icon.icon-2xl
             use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user-follow")
         .fs-4.fw-semibold 385
-        small.text-muted.text-uppercase.fw-semibold New Clients
+        small.text-medium-emphasis.text-uppercase.fw-semibold New Clients
         .progress.progress-xs.mt-3.mb-0
           .progress-bar.bg-success(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
     .card.mb-4
       .card-body
-        .text-muted.text-end.mb-4
+        .text-medium-emphasis.text-end.mb-4
           svg.icon.icon-2xl
             use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-basket")
         .fs-4.fw-semibold 1238
-        small.text-muted.text-uppercase.fw-semibold Products sold
+        small.text-medium-emphasis.text-uppercase.fw-semibold Products sold
         .progress.progress-xs.mt-3.mb-0
           .progress-bar.bg-warning(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
     .card.mb-4
       .card-body
-        .text-muted.text-end.mb-4
+        .text-medium-emphasis.text-end.mb-4
           svg.icon.icon-2xl
             use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-chart-pie")
         .fs-4.fw-semibold 28%
-        small.text-muted.text-uppercase.fw-semibold Returning Visitors
+        small.text-medium-emphasis.text-uppercase.fw-semibold Returning Visitors
         .progress.progress-xs.mt-3.mb-0
           .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
     .card.mb-4
       .card-body
-        .text-muted.text-end.mb-4
+        .text-medium-emphasis.text-end.mb-4
           svg.icon.icon-2xl
             use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-speedometer")
         .fs-4.fw-semibold 5:34:11
-        small.text-muted.text-uppercase.fw-semibold Avg. Time
+        small.text-medium-emphasis.text-uppercase.fw-semibold Avg. Time
         .progress.progress-xs.mt-3.mb-0
           .progress-bar.bg-danger(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
   .row
     .col-sm-6.col-md-2
       .card.mb-4
         .card-body
-          .text-muted.text-end.mb-4
+          .text-medium-emphasis.text-end.mb-4
             svg.icon.icon-2xl
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-people")
           .fs-4.fw-semibold 87.500
-          small.text-muted.text-uppercase.fw-semibold Visitors
+          small.text-medium-emphasis.text-uppercase.fw-semibold Visitors
           .progress.progress-xs.mt-3.mb-0
             .progress-bar.bg-info(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
     // /.col
     .col-sm-6.col-md-2
       .card.mb-4
         .card-body
-          .text-muted.text-end.mb-4
+          .text-medium-emphasis.text-end.mb-4
               svg.icon.icon-2xl
                 use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user-follow")
           .fs-4.fw-semibold 385
-          small.text-muted.text-uppercase.fw-semibold New Clients
+          small.text-medium-emphasis.text-uppercase.fw-semibold New Clients
           .progress.progress-xs.mt-3.mb-0
             .progress-bar.bg-success(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
     // /.col
     .col-sm-6.col-md-2
       .card.mb-4
         .card-body
-          .text-muted.text-end.mb-4
+          .text-medium-emphasis.text-end.mb-4
             svg.icon.icon-2xl
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-basket")
           .fs-4.fw-semibold 1238
-          small.text-muted.text-uppercase.fw-semibold Products sold
+          small.text-medium-emphasis.text-uppercase.fw-semibold Products sold
           .progress.progress-xs.mt-3.mb-0
             .progress-bar.bg-warning(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
     // /.col
     .col-sm-6.col-md-2
       .card.mb-4
         .card-body
-          .text-muted.text-end.mb-4
+          .text-medium-emphasis.text-end.mb-4
             svg.icon.icon-2xl
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-chart-pie")
           .fs-4.fw-semibold 28%
-          small.text-muted.text-uppercase.fw-semibold Returning Visitors
+          small.text-medium-emphasis.text-uppercase.fw-semibold Returning Visitors
           .progress.progress-xs.mt-3.mb-0
             .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
     // /.col
     .col-sm-6.col-md-2
       .card.mb-4
         .card-body
-          .text-muted.text-end.mb-4
+          .text-medium-emphasis.text-end.mb-4
             svg.icon.icon-2xl
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-speedometer")
           .fs-4.fw-semibold 5:34:11
-          small.text-muted.text-uppercase.fw-semibold Avg. Time
+          small.text-medium-emphasis.text-uppercase.fw-semibold Avg. Time
           .progress.progress-xs.mt-3.mb-0
             .progress-bar.bg-danger(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
     // /.col
     .col-sm-6.col-md-2
       .card.mb-4
         .card-body
-          .text-muted.text-end.mb-4
+          .text-medium-emphasis.text-end.mb-4
             svg.icon.icon-2xl
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-speech")
           .fs-4.fw-semibold 972
-          small.text-muted.text-uppercase.fw-semibold Comments
+          small.text-medium-emphasis.text-uppercase.fw-semibold Comments
           .progress.progress-xs.mt-3.mb-0
             .progress-bar.bg-info(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
     // /.col
