--- a/src/pug/views/404.pug
+++ b/src/pug/views/404.pug
@@ -7,7 +7,7 @@ block view
         .clearfix
           h1.float-start.display-3.me-4 404
           h4.pt-3 Oops! You're lost.
-          p.text-muted The page you are looking for was not found.
+          p.text-medium-emphasis The page you are looking for was not found.
         .input-group
           span.input-group-text
             svg.icon
