--- a/src/pug/views/index.pug
+++ b/src/pug/views/index.pug
@@ -86,7 +86,7 @@ block view
       .d-flex.justify-content-between
         div
           h4.card-title.mb-0 Traffic
-          .small.text-muted September  2019
+          .small.text-medium-emphasis September  2019
         .btn-toolbar.d-none.d-md-block(role='toolbar' aria-label='Toolbar with buttons')
           .btn-group.btn-group-toggle.mx-3(data-coreui-toggle='buttons')
             input.btn-check#option1(type='radio', name='options', autocomplete='off')
@@ -106,27 +106,27 @@ block view
     .card-footer
       .row.text-center
         .col-sm-12.col-md.mb-sm-2.mb-0
-          .text-muted Visits
+          .text-medium-emphasis Visits
           .fw-semibold 29.703 Users (40%)
           .progress.progress-xs.mt-2
             .progress-bar.bg-success(role='progressbar', style='width: 40%', aria-valuenow='40', aria-valuemin='0', aria-valuemax='100')
         .col-sm-12.col-md.mb-sm-2.mb-0
-          .text-muted Unique
+          .text-medium-emphasis Unique
           .fw-semibold 24.093 Users (20%)
           .progress.progress-xs.mt-2
             .progress-bar.bg-info(role='progressbar', style='width: 20%', aria-valuenow='20', aria-valuemin='0', aria-valuemax='100')
         .col-sm-12.col-md.mb-sm-2.mb-0
-          .text-muted Pageviews
+          .text-medium-emphasis Pageviews
           .fw-semibold 78.706 Views (60%)
           .progress.progress-xs.mt-2
             .progress-bar.bg-warning(role='progressbar', style='width: 60%', aria-valuenow='60', aria-valuemin='0', aria-valuemax='100')
         .col-sm-12.col-md.mb-sm-2.mb-0
-          .text-muted New Users
+          .text-medium-emphasis New Users
           .fw-semibold 22.123 Users (80%)
           .progress.progress-xs.mt-2
             .progress-bar.bg-danger(role='progressbar', style='width: 80%', aria-valuenow='80', aria-valuemin='0', aria-valuemax='100')
         .col-sm-12.col-md.mb-sm-2.mb-0
-          .text-muted Bounce Rate
+          .text-medium-emphasis Bounce Rate
           .fw-semibold 40.15%
           .progress.progress-xs.mt-2
             .progress-bar(role='progressbar', style='width: 40%', aria-valuenow='40', aria-valuemin='0', aria-valuemax='100')
@@ -142,11 +142,11 @@ block view
         .card-body.row.text-center
           .col
             .fs-5.fw-semibold 89k
-            .text-uppercase.text-muted.small friends
+            .text-uppercase.text-medium-emphasis.small friends
           .vr
           .col
             .fs-5.fw-semibold 459
-            .text-uppercase.text-muted.small feeds
+            .text-uppercase.text-medium-emphasis.small feeds
     // /.col
     .col-sm-6.col-lg-4
       .card.mb-4(style='--cui-card-cap-bg: #00aced')
@@ -158,11 +158,11 @@ block view
         .card-body.row.text-center
           .col
             .fs-5.fw-semibold 973k
-            .text-uppercase.text-muted.small followers
+            .text-uppercase.text-medium-emphasis.small followers
           .vr
           .col
             .fs-5.fw-semibold 1.792
-            .text-uppercase.text-muted.small tweets
+            .text-uppercase.text-medium-emphasis.small tweets
     // /.col
     .col-sm-6.col-lg-4
       .card.mb-4(style='--cui-card-cap-bg: #4875b4')
@@ -174,11 +174,11 @@ block view
         .card-body.row.text-center
           .col
             .fs-5.fw-semibold 500+
-            .text-uppercase.text-muted.small contacts
+            .text-uppercase.text-medium-emphasis.small contacts
           .vr
           .col
             .fs-5.fw-semibold 292
-            .text-uppercase.text-muted.small feeds
+            .text-uppercase.text-medium-emphasis.small feeds
     // /.col
   // /.row
   .row
@@ -192,12 +192,12 @@ block view
               .row
                 .col-6
                   .c-callout.c-callout-info
-                    small.text-muted New Clients
+                    small.text-medium-emphasis New Clients
                     div.fs-5.fw-semibold 9,123
                 // /.col
                 .col-6
                   .c-callout.c-callout-danger
-                    small.text-muted Recuring Clients
+                    small.text-medium-emphasis Recuring Clients
                     div.fs-5.fw-semibold 22,643
                 // /.col
               // /.row
@@ -270,12 +270,12 @@ block view
               .row
                 .col-6
                   .c-callout.c-callout-warning
-                    small.text-muted Pageviews
+                    small.text-medium-emphasis Pageviews
                     div.fs-5.fw-semibold 78,623
                 // /.col
                 .col-6
                   .c-callout.c-callout-success
-                    small.text-muted Organic
+                    small.text-medium-emphasis Organic
                     div.fs-5.fw-semibold 49,123
                 // /.col
               // /.row
@@ -304,7 +304,7 @@ block view
                     use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-google")
                   div Organic Search
                   .ms-auto.fw-semibold.me-2 191.235
-                  .text-muted.small (56%)
+                  .text-medium-emphasis.small (56%)
                 .progress-group-bars
                   .progress.progress-xs
                     .progress-bar.bg-success(role='progressbar', style='width: 56%', aria-valuenow='56', aria-valuemin='0', aria-valuemax='100')
@@ -314,7 +314,7 @@ block view
                     use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-facebook-f")
                   div Facebook
                   .ms-auto.fw-semibold.me-2 51.223
-                  .text-muted.small (15%)
+                  .text-medium-emphasis.small (15%)
                 .progress-group-bars
                   .progress.progress-xs
                     .progress-bar.bg-success(role='progressbar', style='width: 15%', aria-valuenow='15', aria-valuemin='0', aria-valuemax='100')
@@ -324,7 +324,7 @@ block view
                     use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-twitter")
                   div Twitter
                   .ms-auto.fw-semibold.me-2 37.564
-                  .text-muted.small (11%)
+                  .text-medium-emphasis.small (11%)
                 .progress-group-bars
                   .progress.progress-xs
                     .progress-bar.bg-success(role='progressbar', style='width: 11%', aria-valuenow='11', aria-valuemin='0', aria-valuemax='100')
@@ -334,7 +334,7 @@ block view
                     use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-linkedin")
                   div LinkedIn
                   .ms-auto.fw-semibold.me-2 27.319
-                  .text-muted.small (8%)
+                  .text-medium-emphasis.small (8%)
                 .progress-group-bars
                   .progress.progress-xs
                     .progress-bar.bg-success(role='progressbar', style='width: 8%', aria-valuenow='8', aria-valuemin='0', aria-valuemax='100')
@@ -362,7 +362,7 @@ block view
                       span.avatar-status.bg-success
                   td
                     div Yiorgos Avraamu
-                    .small.text-muted
+                    .small.text-medium-emphasis
                       span New
                       |  | Registered: Jan 1, 2015
                   td.text-center
@@ -373,14 +373,14 @@ block view
                       .float-start
                         .fw-semibold 50%
                       .float-end
-                        small.text-muted Jun 11, 2015 - Jul 10, 2015
+                        small.text-medium-emphasis Jun 11, 2015 - Jul 10, 2015
                     .progress.progress-xs
                       .progress-bar.bg-success(role='progressbar', style='width: 50%', aria-valuenow='50', aria-valuemin='0', aria-valuemax='100')
                   td.text-center
                     svg.icon.icon-xl
                       use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-cc-mastercard")
                   td
-                    .small.text-muted Last login
+                    .small.text-medium-emphasis Last login
                     .fw-semibold 10 sec ago
                   td
                     .dropdown
@@ -398,7 +398,7 @@ block view
                       span.avatar-status.bg-danger
                   td
                     div Avram Tarasios
-                    .small.text-muted
+                    .small.text-medium-emphasis
                       span Recurring
                       |  | Registered: Jan 1, 2015
                   td.text-center
@@ -409,14 +409,14 @@ block view
                       .float-start
                         .fw-semibold 10%
                       .float-end
-                        small.text-muted Jun 11, 2015 - Jul 10, 2015
+                        small.text-medium-emphasis Jun 11, 2015 - Jul 10, 2015
                     .progress.progress-xs
                       .progress-bar.bg-info(role='progressbar', style='width: 10%', aria-valuenow='10', aria-valuemin='0', aria-valuemax='100')
                   td.text-center
                     svg.icon.icon-xl
                       use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-cc-visa")
                   td
-                    .small.text-muted Last login
+                    .small.text-medium-emphasis Last login
                     .fw-semibold 5 minutes ago
                   td
                     .dropdown
@@ -434,7 +434,7 @@ block view
                       span.avatar-status.bg-warning
                   td
                     div Quintin Ed
-                    .small.text-muted
+                    .small.text-medium-emphasis
                       span New
                       |  | Registered: Jan 1, 2015
                   td.text-center
@@ -445,14 +445,14 @@ block view
                       .float-start
                         .fw-semibold 74%
                       .float-end
-                        small.text-muted Jun 11, 2015 - Jul 10, 2015
+                        small.text-medium-emphasis Jun 11, 2015 - Jul 10, 2015
                     .progress.progress-xs
                       .progress-bar.bg-warning(role='progressbar', style='width: 74%', aria-valuenow='74', aria-valuemin='0', aria-valuemax='100')
                   td.text-center
                     svg.icon.icon-xl
                       use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-cc-stripe")
                   td
-                    .small.text-muted Last login
+                    .small.text-medium-emphasis Last login
                     .fw-semibold 1 hour ago
                   td
                     .dropdown
@@ -470,7 +470,7 @@ block view
                       span.avatar-status.bg-secondary
                   td
                     div Enéas Kwadwo
-                    .small.text-muted
+                    .small.text-medium-emphasis
                       span New
                       |  | Registered: Jan 1, 2015
                   td.text-center
@@ -481,14 +481,14 @@ block view
                       .float-start
                         .fw-semibold 98%
                       .float-end
-                        small.text-muted Jun 11, 2015 - Jul 10, 2015
+                        small.text-medium-emphasis Jun 11, 2015 - Jul 10, 2015
                     .progress.progress-xs
                       .progress-bar.bg-danger(role='progressbar', style='width: 98%', aria-valuenow='98', aria-valuemin='0', aria-valuemax='100')
                   td.text-center
                     svg.icon.icon-xl
                       use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-cc-paypal")
                   td
-                    .small.text-muted Last login
+                    .small.text-medium-emphasis Last login
                     .fw-semibold Last month
                   td
                     .dropdown
@@ -506,7 +506,7 @@ block view
                       span.avatar-status.bg-success
                   td
                     div Agapetus Tadeáš
-                    .small.text-muted
+                    .small.text-medium-emphasis
                       span New
                       |  | Registered: Jan 1, 2015
                   td.text-center
@@ -517,14 +517,14 @@ block view
                       .float-start
                         .fw-semibold 22%
                       .float-end
-                        small.text-muted Jun 11, 2015 - Jul 10, 2015
+                        small.text-medium-emphasis Jun 11, 2015 - Jul 10, 2015
                     .progress.progress-xs
                       .progress-bar.bg-info(role='progressbar', style='width: 22%', aria-valuenow='22', aria-valuemin='0', aria-valuemax='100')
                   td.text-center
                     svg.icon.icon-xl
                       use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-cc-apple-pay")
                   td
-                    .small.text-muted Last login
+                    .small.text-medium-emphasis Last login
                     .fw-semibold Last week
                   td
                     .dropdown.dropup
@@ -542,7 +542,7 @@ block view
                       span.avatar-status.bg-danger
                   td
                     div Friderik Dávid
-                    .small.text-muted
+                    .small.text-medium-emphasis
                       span New
                       |  | Registered: Jan 1, 2015
                   td.text-center
@@ -553,14 +553,14 @@ block view
                       .float-start
                         .fw-semibold 43%
                       .float-end
-                        small.text-muted Jun 11, 2015 - Jul 10, 2015
+                        small.text-medium-emphasis Jun 11, 2015 - Jul 10, 2015
                     .progress.progress-xs
                       .progress-bar.bg-success(role='progressbar', style='width: 43%', aria-valuenow='43', aria-valuemin='0', aria-valuemax='100')
                   td.text-center
                     svg.icon.icon-xl
                       use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-cc-amex")
                   td
-                    .small.text-muted Last login
+                    .small.text-medium-emphasis Last login
                     .fw-semibold Yesterday
                   td
                     .dropdown.dropup
