--- a/src/pug/views/login.pug
+++ b/src/pug/views/login.pug
@@ -8,7 +8,7 @@ block view
           .card.col-md-7.p-4.mb-0
             .card-body
               h1 Login
-              p.text-muted Sign In to your account
+              p.text-medium-emphasis Sign In to your account
               .input-group.mb-3
                 span.input-group-text
                     svg.icon
