fix: add missing dot

--- a/src/pug/views/base/forms.pug
+++ b/src/pug/views/base/forms.pug
@@ -608,7 +608,7 @@ block view
 
             .mb-3
               label.form-label(for='appendedPrependedInput') Append and prepend
-              input-group
+              .input-group
                 span.input-group-text $
                 input#appendedPrependedInput.form-control(size='16', type='text')
                 span.input-group-text .00
