--- a/src/pug/views/charts.pug
+++ b/src/pug/views/charts.pug
@@ -8,58 +8,64 @@ block scripts
   script(src='js/charts.js')
 
 block view
-  .card-columns.cols-2
-    .card.mb-4
-      .card-header
-        | Line Chart
-        .float-end
-          a(href='http://www.chartjs.org', target='_blank')
-            | docs
-      .card-body
-        .c-chart-wrapper
-          canvas#canvas-1
-    .card.mb-4
-      .card-header
-        | Bar Chart
-        .float-end
-          a(href='http://www.chartjs.org', target='_blank')
-            | docs
-      .card-body
-        .c-chart-wrapper
-          canvas#canvas-2
-    .card.mb-4
-      .card-header
-        | Doughnut Chart
-        .float-end
-          a(href='http://www.chartjs.org', target='_blank')
-            | docs
-      .card-body
-        .c-chart-wrapper
-          canvas#canvas-3
-    .card.mb-4
-      .card-header
-        | Radar Chart
-        .float-end
-          a(href='http://www.chartjs.org', target='_blank')
-            | docs
-      .card-body
-        .c-chart-wrapper
-          canvas#canvas-4
-    .card.mb-4
-      .card-header
-        | Pie Chart
-        .float-end
-          a(href='http://www.chartjs.org', target='_blank')
-            | docs
-      .card-body
-        .c-chart-wrapper
-          canvas#canvas-5
-    .card.mb-4
-      .card-header
-        | Polar Area Chart
-        .float-end
-          a(href='http://www.chartjs.org', target='_blank')
-            | docs
-      .card-body
-        .c-chart-wrapper
-          canvas#canvas-6
+  .row.row-cols-2
+    .col
+      .card.mb-4
+        .card-header
+          | Line Chart
+          .float-end
+            a(href='http://www.chartjs.org', target='_blank')
+              | docs
+        .card-body
+          .c-chart-wrapper
+            canvas#canvas-1
+    .col
+      .card.mb-4
+        .card-header
+          | Bar Chart
+          .float-end
+            a(href='http://www.chartjs.org', target='_blank')
+              | docs
+        .card-body
+          .c-chart-wrapper
+            canvas#canvas-2
+    .col
+      .card.mb-4
+        .card-header
+          | Doughnut Chart
+          .float-end
+            a(href='http://www.chartjs.org', target='_blank')
+              | docs
+        .card-body
+          .c-chart-wrapper
+            canvas#canvas-3
+    .col
+      .card.mb-4
+        .card-header
+          | Radar Chart
+          .float-end
+            a(href='http://www.chartjs.org', target='_blank')
+              | docs
+        .card-body
+          .c-chart-wrapper
+            canvas#canvas-4
+    .col
+      .card.mb-4
+        .card-header
+          | Pie Chart
+          .float-end
+            a(href='http://www.chartjs.org', target='_blank')
+              | docs
+        .card-body
+          .c-chart-wrapper
+            canvas#canvas-5
+    .col
+      .card.mb-4
+        .card-header
+          | Polar Area Chart
+          .float-end
+            a(href='http://www.chartjs.org', target='_blank')
+              | docs
+        .card-body
+          .c-chart-wrapper
+            canvas#canvas-6
