docs: update links to documentation

--- a/src/pug/views/base/collapse.pug
+++ b/src/pug/views/base/collapse.pug
@@ -5,7 +5,7 @@ block view
     .card-header
       |  Collapse
       .float-end
-        a(href='http://coreui.io/docs/components/collapse/', target='_blank')
+        a(href='https://coreui.io/docs/4.0/components/collapse/', target='_blank')
           | docs
     .card-body
       p
