--- a/src/pug/views/base/list-group.pug
+++ b/src/pug/views/base/list-group.pug
@@ -7,7 +7,7 @@ block view
         .card-header
           |  List group
           .float-end
-            a(href='http://coreui.io/docs/components/list-group/', target='_blank')
+            a(href='https://coreui.io/docs/4.0/components/list-group/', target='_blank')
               | docs
         .card-body
           ul.list-group
