--- a/src/pug/views/base/navs.pug
+++ b/src/pug/views/base/navs.pug
@@ -7,7 +7,7 @@ block view
         .card-header
           |  Navs
           .float-end
-            a(href='http://coreui.io/docs/components/navs/', target='_blank')
+            a(href='https://coreui.io/docs/4.0/components/navs/', target='_blank')
               | docs
         .card-body
           ul.nav
