--- a/src/pug/views/base/pagination.pug
+++ b/src/pug/views/base/pagination.pug
@@ -5,7 +5,7 @@ block view
     .card-header
       |  Pagination
       .float-end
-        a(href='http://coreui.io/docs/components/pagination/', target='_blank')
+        a(href='https://coreui.io/docs/4.0/components/pagination/', target='_blank')
           | docs
     .card-body
       nav(aria-label='Page navigation example')
