--- a/src/pug/views/base/popovers.pug
+++ b/src/pug/views/base/popovers.pug
@@ -9,7 +9,7 @@ block view
     .card-header
       |  Popovers
       .float-end
-        a(href='http://coreui.io/docs/components/popover/popovers.html', target='_blank')
+        a(href='https://coreui.io/docs/4.0/components/popover/popovers.html', target='_blank')
           | docs
     .card-body
       button.btn.btn-lg.btn-danger(type='button', data-coreui-toggle='popover', title='Popover title', data-coreui-content="And here's some amazing content. It's very engaging. Right?")
