--- a/src/pug/views/base/progress.pug
+++ b/src/pug/views/base/progress.pug
@@ -5,7 +5,7 @@ block view
     .card-header
       | Progress
       .float-end
-        a(href='http://coreui.io/docs/components/popover/popovers.html', target='_blank')
+        a(href='https://coreui.io/docs/4.0/components/popover/popovers.html', target='_blank')
           | docs
     .card-body
       .progress.mb-3
