--- a/src/pug/views/base/tooltips.pug
+++ b/src/pug/views/base/tooltips.pug
@@ -9,7 +9,7 @@ block view
     .card-header
       | Tooltips
       .float-end
-        a(href='http://coreui.io/docs/components/tooltips/', target='_blank')
+        a(href='https://coreui.io/docs/4.0/components/tooltips/', target='_blank')
           | docs
     .card-body
       p.text-medium-emphasis Hover over the links below to see tooltips:
