--- a/src/pug/views/buttons/button-group.pug
+++ b/src/pug/views/buttons/button-group.pug
@@ -7,7 +7,7 @@ block view
         .card-header
           .fw-semibold Button group
           .float-end
-            a(href='http://coreui.io/docs/components/button-group/', target='_blank')
+            a(href='https://coreui.io/docs/4.0/components/button-group/', target='_blank')
               | docs
         .card-body
           .btn-group(role='group', aria-label='Basic example')
