--- a/src/pug/views/buttons/dropdowns.pug
+++ b/src/pug/views/buttons/dropdowns.pug
@@ -7,7 +7,7 @@ block view
         .card-header
           |  Dropdowns
           .float-end
-            a(href='http://coreui.io/docs/components/dropdowns/', target='_blank')
+            a(href='https://coreui.io/docs/4.0/components/dropdowns/', target='_blank')
               | docs
         .card-body
           .row
