--- a/src/pug/views/notifications/alerts.pug
+++ b/src/pug/views/notifications/alerts.pug
@@ -7,7 +7,7 @@ block view
         .card-header
           |  Bootstrap Alerts
           .float-end
-            a(href='http://coreui.io/docs/components/alerts/', target='_blank')
+            a(href='https://coreui.io/docs/4.0/components/alerts/', target='_blank')
               | docs
         .card-body
           .alert.alert-primary(role='alert')
