--- a/src/pug/views/base/breadcrumb.pug
+++ b/src/pug/views/base/breadcrumb.pug
@@ -7,7 +7,7 @@ block view
         .card-header
           |  Bootstrap Breadcrumb
           .float-end
-            a(href='http://coreui.io/docs/components/breadcrumb/', target='_blank')
+            a(href='https://coreui.io/docs/4.0/components/breadcrumb/', target='_blank')
               | docs
         .card-body
           nav(aria-label='breadcrumb', role='navigation')
