--- a/src/pug/views/base/carousel.pug
+++ b/src/pug/views/base/carousel.pug
@@ -8,7 +8,7 @@ block view
           |  Carousel
           span.small.ms-1 slides only
           .float-end
-            a(href='http://coreui.io/docs/components/carousel/', target='_blank')
+            a(href='https://coreui.io/docs/4.0/components/carousel/', target='_blank')
               | docs
         .card-body
           #carouselExampleSlidesOnly.carousel.slide(data-coreui-ride='carousel')
