--- a/src/pug/views/base/scrollspy.pug
+++ b/src/pug/views/base/scrollspy.pug
@@ -5,7 +5,7 @@ block view
     .card-header
       | Scrollspy
       .float-end
-        a(href='http://coreui.io/docs/components/scrollspy/', target='_blank')
+        a(href='https://coreui.io/docs/4.0/components/scrollspy/', target='_blank')
           | docs
     .card-body
       nav#navbar-example1.navbar.navbar-light.bg-light(style='padding: .5rem 1rem;')
