--- a/src/pug/views/notifications/badge.pug
+++ b/src/pug/views/notifications/badge.pug
@@ -7,7 +7,7 @@ block view
         .card-header
           |  Bootstrap Badges
           .float-end
-            a(href='http://coreui.io/docs/components/badge/', target='_blank')
+            a(href='https://coreui.io/docs/4.0/components/badge/', target='_blank')
               | docs
         .card-body
           h1
