--- a/src/pug/_layout/default.pug
+++ b/src/pug/_layout/default.pug
@@ -7,9 +7,9 @@ html(lang='en')
     base(href=base)
     include ../_partials/head.pug
     block styles
-  body.bg-light
+  body
     include ../_partials/sidebar.pug
-    .wrapper.d-flex.flex-column.min-vh-100
+    .wrapper.d-flex.flex-column.min-vh-100.bg-light
       include ../_partials/header.pug
       .body.flex-grow-1.px-3
         .container-lg
