--- a/src/pug/_layout/pages.pug
+++ b/src/pug/_layout/pages.pug
@@ -8,7 +8,8 @@ html(lang='en')
     base(href=base)
     include ../_partials/head.pug
     block styles
-  body.bg-light.min-vh-100.d-flex.flex-row.align-items-center
-    block view
+  body
+    .bg-light.min-vh-100.d-flex.flex-row.align-items-center
+      block view
 
     include ../_partials/scripts.pug
