--- a/src/views/500.html
+++ b/src/views/500.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!--
 * CoreUI - Free Bootstrap Admin Template
-* @version v4.0.0-alpha.0
+* @version v4.0.0-alpha.1
 * @link https://coreui.io
-* Copyright (c) 2020 creativeLabs Łukasz Holeczek
+* Copyright (c) 2021 creativeLabs Łukasz Holeczek
 * Licensed under MIT (https://coreui.io/license)
 -->
 
@@ -51,22 +51,23 @@
       gtag('config', 'UA-118965717-5');
     </script>
   </head>
-  <body class="c-app flex-row align-items-center">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md-6">
-          <div class="clearfix">
-            <h1 class="float-start display-3 mr-4">500</h1>
-            <h4 class="pt-3">Houston, we have a problem!</h4>
-            <p class="text-muted">The page you are looking for is temporarily unavailable.</p>
-          </div>
-          <div class="input-prepend input-group">
-            <div class="input-group-prepend"><span class="input-group-text">
-                <svg class="c-icon">
+  <body>
+    <div class="bg-light min-vh-100 d-flex flex-row align-items-center">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-6">
+            <div class="clearfix">
+              <h1 class="float-start display-3 me-4">500</h1>
+              <h4 class="pt-3">Houston, we have a problem!</h4>
+              <p class="text-medium-emphasis">The page you are looking for is temporarily unavailable.</p>
+            </div>
+            <div class="input-group"><span class="input-group-text">
+                <svg class="icon">
                   <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-magnifying-glass"></use>
-                </svg></span></div>
-            <input class="form-control" id="prependedInput" size="16" type="text" placeholder="What are you looking for?"><span class="input-group-append">
-              <button class="btn btn-info" type="button">Search</button></span>
+                </svg></span>
+              <input class="form-control" id="prependedInput" size="16" type="text" placeholder="What are you looking for?">
+              <button class="btn btn-info" type="button">Search</button>
+            </div>
           </div>
         </div>
       </div>
