--- a/src/views/register.html
+++ b/src/views/register.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!--
 * CoreUI - Free Bootstrap Admin Template
-* @version v4.0.0-alpha.0
+* @version v4.0.0-alpha.1
 * @link https://coreui.io
-* Copyright (c) 2020 creativeLabs Łukasz Holeczek
+* Copyright (c) 2021 creativeLabs Łukasz Holeczek
 * Licensed under MIT (https://coreui.io/license)
 -->
 
@@ -51,52 +51,40 @@
       gtag('config', 'UA-118965717-5');
     </script>
   </head>
-  <body class="c-app flex-row align-items-center">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md-6">
-          <div class="card mb-4 mx-4">
-            <div class="card-body p-4">
-              <h1>Register</h1>
-              <p class="text-muted">Create your account</p>
-              <div class="input-group mb-3">
-                <div class="input-group-prepend"><span class="input-group-text">
-                    <svg class="c-icon">
+  <body>
+    <div class="bg-light min-vh-100 d-flex flex-row align-items-center">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-6">
+            <div class="card mb-4 mx-4">
+              <div class="card-body p-4">
+                <h1>Register</h1>
+                <p class="text-medium-emphasis">Create your account</p>
+                <div class="input-group mb-3"><span class="input-group-text">
+                    <svg class="icon">
                       <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user"></use>
-                    </svg></span></div>
-                <input class="form-control" type="text" placeholder="Username">
-              </div>
-              <div class="input-group mb-3">
-                <div class="input-group-prepend"><span class="input-group-text">
-                    <svg class="c-icon">
+                    </svg></span>
+                  <input class="form-control" type="text" placeholder="Username">
+                </div>
+                <div class="input-group mb-3"><span class="input-group-text">
+                    <svg class="icon">
                       <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-envelope-open"></use>
-                    </svg></span></div>
-                <input class="form-control" type="text" placeholder="Email">
-              </div>
-              <div class="input-group mb-3">
-                <div class="input-group-prepend"><span class="input-group-text">
-                    <svg class="c-icon">
-                      <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lock-locked"></use>
-                    </svg></span></div>
-                <input class="form-control" type="password" placeholder="Password">
-              </div>
-              <div class="input-group mb-4">
-                <div class="input-group-prepend"><span class="input-group-text">
-                    <svg class="c-icon">
-                      <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lock-locked"></use>
-                    </svg></span></div>
-                <input class="form-control" type="password" placeholder="Repeat password">
-              </div>
-              <button class="btn btn-block btn-success" type="button">Create Account</button>
-            </div>
-            <div class="card-footer p-4">
-              <div class="row">
-                <div class="col-6">
-                  <button class="btn btn-block btn-facebook" type="button"><span>facebook</span></button>
+                    </svg></span>
+                  <input class="form-control" type="text" placeholder="Email">
                 </div>
-                <div class="col-6">
-                  <button class="btn btn-block btn-twitter" type="button"><span>twitter</span></button>
+                <div class="input-group mb-3"><span class="input-group-text">
+                    <svg class="icon">
+                      <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lock-locked"></use>
+                    </svg></span>
+                  <input class="form-control" type="password" placeholder="Password">
                 </div>
+                <div class="input-group mb-4"><span class="input-group-text">
+                    <svg class="icon">
+                      <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lock-locked"></use>
+                    </svg></span>
+                  <input class="form-control" type="password" placeholder="Repeat password">
+                </div>
+                <button class="btn btn-block btn-success" type="button">Create Account</button>
               </div>
             </div>
           </div>
