--- a/src/views/login.html
+++ b/src/views/login.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!--
 * CoreUI - Free Bootstrap Admin Template
-* @version v4.0.0-alpha.0
+* @version v4.0.0-alpha.1
 * @link https://coreui.io
-* Copyright (c) 2020 creativeLabs Łukasz Holeczek
+* Copyright (c) 2021 creativeLabs Łukasz Holeczek
 * Licensed under MIT (https://coreui.io/license)
 -->
 
@@ -51,45 +51,45 @@
       gtag('config', 'UA-118965717-5');
     </script>
   </head>
-  <body class="c-app flex-row align-items-center">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md-8">
-          <div class="card-group">
-            <div class="card mb-4 p-4">
-              <div class="card-body">
-                <h1>Login</h1>
-                <p class="text-muted">Sign In to your account</p>
-                <div class="input-group mb-3">
-                  <div class="input-group-prepend"><span class="input-group-text">
-                      <svg class="c-icon">
+  <body>
+    <div class="bg-light min-vh-100 d-flex flex-row align-items-center">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+            <div class="card-group d-block d-md-flex row">
+              <div class="card col-md-7 p-4 mb-0">
+                <div class="card-body">
+                  <h1>Login</h1>
+                  <p class="text-medium-emphasis">Sign In to your account</p>
+                  <div class="input-group mb-3"><span class="input-group-text">
+                      <svg class="icon">
                         <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user"></use>
-                      </svg></span></div>
-                  <input class="form-control" type="text" placeholder="Username">
-                </div>
-                <div class="input-group mb-4">
-                  <div class="input-group-prepend"><span class="input-group-text">
-                      <svg class="c-icon">
-                        <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lock-locked"></use>
-                      </svg></span></div>
-                  <input class="form-control" type="password" placeholder="Password">
-                </div>
-                <div class="row">
-                  <div class="col-6">
-                    <button class="btn btn-primary px-4" type="button">Login</button>
+                      </svg></span>
+                    <input class="form-control" type="text" placeholder="Username">
                   </div>
-                  <div class="col-6 text-right">
-                    <button class="btn btn-link px-0" type="button">Forgot password?</button>
+                  <div class="input-group mb-4"><span class="input-group-text">
+                      <svg class="icon">
+                        <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lock-locked"></use>
+                      </svg></span>
+                    <input class="form-control" type="password" placeholder="Password">
+                  </div>
+                  <div class="row">
+                    <div class="col-6">
+                      <button class="btn btn-primary px-4" type="button">Login</button>
+                    </div>
+                    <div class="col-6 text-end">
+                      <button class="btn btn-link px-0" type="button">Forgot password?</button>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="card mb-4 text-white bg-primary py-5 d-md-down-none" style="width:44%">
-              <div class="card-body text-center">
-                <div>
-                  <h2>Sign up</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                  <button class="btn btn-lg btn-outline-light mt-3" type="button">Register Now!</button>
+              <div class="card col-md-5 text-white bg-primary py-5">
+                <div class="card-body text-center">
+                  <div>
+                    <h2>Sign up</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <button class="btn btn-lg btn-outline-light mt-3" type="button">Register Now!</button>
+                  </div>
                 </div>
               </div>
             </div>
