feat: add RTL support

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,9 @@
 // If you want to override variables do it here
 @import "variables";
 
+$enable-ltr: true;
+$enable-rtl: true;
+
 // Import styles
 @import "@coreui/coreui/scss/coreui";
 
